Add initial stats ttl changes
